--- a/index.html
+++ b/index.html
@@ -27,16 +27,37 @@
   <main>
     <section>
       <div class="container">
-        <h1>Guaracar Locação de automoveis</h1>
+        <h1>Acesso ao Sistema</h1>
+
         <form action="">
-          <i class="material-icons left t">person</i>CPF</a>
-          <input type="number" placeholder="000.000.000.00">
-          <i class="material-icons left t">enhanced_encryption</i>Senha</a>
-          <input ype="password" placeholder="********">
+          <div class="row">
+            <div class="input-field col s12">
+              <i class="material-icons prefix">person</i>
+              <input type="number" placeholder="000.000.000.00">
+              <label for="icon prefix">CPF</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <i class="material-icons prefix">lock</i>
+              <input type="password" placeholder="********">
+              <label for="icon prefix">Senha</label>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col s12">
+              <button id="button-login" class="waves-effect waves-light btn" type="button">
+                <i class="material-icons left">check_circle</i>Entrar</button>
+            </div>
+          </div>
         </form>
-      </div>
-      <p id="p-criar-conta">Não possui conta? <a href="">Crie um usuário.</a></p>
-      </div>
+
+        <div class="row">
+          <div class="col s12">
+            <p id="p-criar-conta">Não possui uma conta? <a href="">Crie um usuário.</a></p>
+          </div>
+        </div>
     </section>
   </main>
 
@@ -45,6 +66,8 @@
       <p>GuaraCar Locações de automoveis - 2019</p>
     </footer>
   </section>
+
+  <script src="assets/libraries/jquery-v3.4.1/jquery-3.4.1.js"></script>
   <script src="assets/libraries/materialize-v0.100.2/js/materialize.min.js"></script>
 </body>
 
