--- a/cadastro-usuario.html
+++ b/cadastro-usuario.html
@@ -21,14 +21,16 @@
             <i class="material-icons left">directions_car</i>GuaraCar
           </a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="#modal1" class="modal-trigger">
+            <li><a href="#modal-servico" class="modal-trigger">
                 <i class="material-icons left">apps</i>Serviços</a></li>
+            <li><a href="index.html" class="modal-trigger">
+                <i class="material-icons left">power_settings_new</i>Encerar Sessão</a></li>
           </ul>
         </div>
     </nav>
   </div>
 
-  <div id="modal1" class="modal">
+  <div id="modal-servico" class="modal">
     <div class="modal-content">
       <h4>Serviços</h4>
       <div class="row">
@@ -65,7 +67,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Sair</a>
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Fechar</a>
     </div>
   </div>
 
