--- a/cadastro-usuario.html
+++ b/cadastro-usuario.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="author" content="Bruno José dos Santos Wogt">
-  <link type="text/css" rel="stylesheet" href="assets/libraries/materialize-v0.100.2/css/materialize.min.css">
+  <link type="text/css" rel="stylesheet" href="assets/libraries/materialize-v1.0.0/css/materialize.min.css">
   <link type="text/css" rel="stylesheet" href="assets/resources/styles/style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Cadastro de Usuário</title>
@@ -18,15 +18,38 @@
       <div class="container">
         <div class="nav-wrapper">
           <a href="index.html" class="brand-logo">
-            <i class="material-icons left">directions_car</i>GuaraCar
+            <i class="material-icons left">directions_car</i>RentACar
           </a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="#modal-servico" class="modal-trigger">
-                <i class="material-icons left">apps</i>Serviços</a></li>
-            <li><a href="index.html" class="modal-trigger">
-                <i class="material-icons left">power_settings_new</i>Encerar Sessão</a></li>
+          <a href="#" data-target="barra-mobile" class="sidenav-trigger">
+              <i class="material-icons">menu</i>
+          </a>
+          <ul class="right hide-on-med-and-down">
+            <li>
+              <a href="#modal-servico" class="modal-trigger">
+                <i class="material-icons left">apps</i>Serviços
+              </a>
+            </li>
+            <li>
+              <a href="index.html" class="modal-trigger">
+                <i class="material-icons left">power_settings_new</i>Encerar Sessão
+              </a>
+            </li>
+          </ul>
+
+          <ul class="sidenav" id="barra-mobile">
+            <li>
+              <a href="#modal-servico" class="modal-trigger">
+                <i class="material-icons left">apps</i>Serviços
+              </a>
+            </li>
+            <li>
+              <a href="index.html" class="modal-trigger">
+                <i class="material-icons left">power_settings_new</i>Encerar Sessão
+              </a>
+            </li>
           </ul>
         </div>
+      </div>
     </nav>
   </div>
 
@@ -34,34 +57,34 @@
     <div class="modal-content">
       <h4>Serviços</h4>
       <div class="row">
-        <div class="col s12 m4 l2">
+        <div class="col s6 m2">
           <a href="">
-            <img id="img-locacao" src="assets/resources/img/locacao.png">Locação
+            <img id="img-locacao" src="assets/resources/img/locacao.png"><p>Locação</p>
           </a>
         </div>
-        <div class="col s12 m4 l2">
+        <div class="col s6 m2">
           <a href="">
-            <img id="img-locacao" src="assets/resources/img/devolucao.png">Devolução
+            <img id="img-locacao" src="assets/resources/img/devolucao.png"><p>Devolução</p>
           </a>
         </div>
-        <div class="col s12 m4 l2">
+        <div class="col s6 m2">
           <a href="">
-            <img id="img-locacao" src="assets/resources/img/gerenciar-veiculo.png">Gerenciar Veiculos
+            <img id="img-locacao" src="assets/resources/img/cliente.png"><p>Gerenciar Clientes</p>
           </a>
         </div>
-        <div class="col s12 m4 l2">
+        <div class="col s6 m2">
           <a href="">
-            <img id="img-locacao" src="assets/resources/img/usuarios.png">Gerenciar Usuários
+            <img id="img-locacao" src="assets/resources/img/usuario.png"><p>Gerenciar Usuários</p>
           </a>
         </div>
-        <div class="col s12 m4 l2">
+        <div class="col s6 m2">
           <a href="">
-            <img id="img-locacao" src="assets/resources/img/gerenciar-cliente.png">Gerenciar Clientes
+            <img id="img-locacao" src="assets/resources/img/veiculo.png"><p>Gerenciar Frota</p>
           </a>
         </div>
-        <div class="col s12 m4 l2">
+        <div class="col s6 m2">
           <a href="">
-            <img id="img-locacao" src="assets/resources/img/relatorio.png">Relatórios
+            <img id="img-locacao" src="assets/resources/img/relatorio.png"><p>Relátorios</p>
           </a>
         </div>
       </div>
@@ -92,30 +115,15 @@
           </div>
 
           <div class="row">
-            <div class="input-field col s12">
+            <div class="input-field col s12 m6">
               <i class="material-icons prefix">mail</i>
               <input type="email" placeholder="larissai@gmail.com">
               <label for="icon_prefix">Email</label>
             </div>
-          </div>
 
-          <div class="row">
-            <div class="input-field col s12 l2">
-              <i class="material-icons prefix">contact_phone</i>
-              <select id="tipo-contato">
-                <option value="0">Telefone</option>
-                <option value="1">Celular</option>
-              </select>
-              <label>Contato</label>
-            </div>
-            <div id="div-telefone" class="input-field col s12 l10">
-              <i class="material-icons prefix">phone</i>
-              <input class="input-telefone" type="text" placeholder="(00)0000-0000">
-              <label for="icon_prefix">Telefone</label>
-            </div>
-            <div id="div-celular" class="input-field col s12 l10 ocultar-conteudo">
+            <div id="div-celular" class="input-field col s12 m6">
               <i class="material-icons prefix">phone_iphone</i>
-              <input class="input-celular" type="text" placeholder="(00)00000-0000">
+              <input class="celular" type="text" placeholder="(00)00000-0000">
               <label for="icon_prefix">Celular</label>
             </div>
           </div>
@@ -123,12 +131,12 @@
           <div class="row">
             <div class="input-field col s12 m12 l6">
               <i class="material-icons prefix">person</i>
-              <input id="input-cpf" type="text" placeholder="000.000.000-00">
+              <input class="cpf" type="text" placeholder="000.000.000-00">
               <label for="icon_prefix">CPF</label>
             </div>
             <div class="input-field col s12 m12 l6">
               <i class="material-icons prefix">child_care</i>
-              <input id="input-data-nascimento" type="text" placeholder="12/12/2000">
+              <input class="data-nascimento" type="text" placeholder="12/12/2000">
               <label for="icon_prefix">Data de Nascimento</label>
             </div>
           </div>
@@ -137,7 +145,7 @@
           <div class="row">
             <div class="input-field col s12 m12 l6">
               <i class="material-icons prefix">location_on</i>
-              <input id="input-cep" type="text" placeholder="85070700">
+              <input id="input-cep" class="cep" type="text" placeholder="85070700">
               <label for="icon_prefix">CEP</label>
             </div>
             <div class="input-field col s12 m12 l6">
@@ -210,12 +218,12 @@
 
   <section>
     <footer class="section cor-principal">
-      <p>GuaraCar Locações de automoveis - 2019</p>
+      <p>RentACar - Locações de automóveis - 2019</p>
     </footer>
   </section>
 
   <script src="assets/libraries/jquery-v3.4.1/jquery-3.4.1.js"></script>
-  <script src="assets/libraries/materialize-v0.100.2/js/materialize.min.js"></script>
+  <script src="assets/libraries/materialize-v1.0.0/js/materialize.min.js"></script>
   <script src="assets/libraries/jQuery-Mask-Plugin-master/dist/jquery.mask.min.js"></script>
   <script src="assets/resources/scripts/cadastro-usuario.js"></script>
 </body>
