--- a/carros-disponiveis.html
+++ b/carros-disponiveis.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="author" content="Bruno José dos Santos Wogt">
-  <link type="text/css" rel="stylesheet" href="assets/libraries/materialize-v0.100.2/css/materialize.min.css">
+  <link type="text/css" rel="stylesheet" href="assets/libraries/materialize-v1.0.0/css/materialize.min.css">
   <link type="text/css" rel="stylesheet" href="assets/resources/styles/style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Carros disponíveis</title>
@@ -34,11 +34,11 @@
 
   <section>
     <footer class="section cor-principal">
-      <p>GuaraCar Locações de automoveis - 2019</p>
+      <p>GuaraCar - Locações de automoveis - 2019</p>
     </footer>
   </section>
 
-  <script src="assets/libraries/materialize-v0.100.2/js/materialize.min.js"></script>
+  <script src="assets/libraries/materialize-v1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
