--- a/atualizar-dados-cliente.html
+++ b/atualizar-dados-cliente.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="assets/libraries/materialize-v1.0.0/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="assets/resources/styles/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Cadastro de Usuário</title>
+    <title>Alterar dados cliente</title>
 </head>
 
 <body>
@@ -53,133 +53,79 @@
         </nav>
     </div>
 
-    <div id="modal-servico" class="modal">
-        <div class="modal-content">
-            <h4>Serviços</h4>
-            <div class="row">
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/locacao.png">
-                        <p>Locação</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
-                        <p>Devolução</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/cliente.png">
-                        <p>Gerenciar Clientes</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/usuario.png">
-                        <p>Gerenciar Usuários</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/veiculo.png">
-                        <p>Gerenciar Frota</p>
-                    </a>
-                </div>
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/relatorio.png">
-                        <p>Relátorios</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Fechar</a>
-        </div>
-    </div>
-
     <main>
         <section>
             <div class="container">
-                <h1>Cadastro de Usuário</h1>
-
+                <h1>Atualizar Dados do Cliente</h1>
                 <form action="">
-                    <h3>Dados pessoais</h3>
                     <div class="row">
-                        <div class="input-field col s12 m12 l6">
+                        <div class="input-field col s12">
                             <i class="material-icons prefix">person</i>
-                            <input type="text" placeholder="Larissa">
-                            <label for="icon_prefix">Primeiro Nome</label>
-                        </div>
-                        <div class="input-field col s12 m12 l6">
-                            <i class="material-icons prefix">person</i>
-                            <input type="text" placeholder="Ferreira">
-                            <label for="icon_prefix">Sobrenome</label>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="input-field col s12 m6">
-                            <i class="material-icons prefix">mail</i>
-                            <input type="email" placeholder="larissai@gmail.com">
-                            <label for="icon_prefix">Email</label>
-                        </div>
-
-                        <div id="div-celular" class="input-field col s12 m6">
-                            <i class="material-icons prefix">phone_iphone</i>
-                            <input class="celular" type="text" placeholder="(00)00000-0000">
-                            <label for="icon_prefix">Celular</label>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="input-field col s12 m12 l6">
-                            <i class="material-icons prefix">person</i>
-                            <input class="cpf" type="text" placeholder="000.000.000-00">
+                            <input id="input-cpf" class="cpf" type="text" class="cep" placeholder="000.000.000-00">
                             <label for="icon_prefix">CPF</label>
                         </div>
                     </div>
-
-                    <h3>Endereço</h3>
-                    <div class="row">
-                        <div class="input-field col s12 m12 l6">
-                            <i class="material-icons prefix">location_on</i>
-                            <input id="input-cep" class="cep" type="text" placeholder="85070700">
-                            <label for="icon_prefix">CEP</label>
+                    <div id="div-dados-pessoa" class="ocultar-conteudo">
+                        <div class="row">
+                            <div class="input-field col s12 m12 l6">
+                                <i class="material-icons prefix">person</i>
+                                <input type="text" placeholder="Darth">
+                                <label for="icon_prefix">Primeiro Nome</label>
+                            </div>
+                            <div class="input-field col s12 m12 l6">
+                                <i class="material-icons prefix">person</i>
+                                <input type="text" placeholder="Vaider">
+                                <label for="icon_prefix">Sobrenome</label>
+                            </div>
                         </div>
-                        <div class="input-field col s12 m12 l6">
-                            <i class="material-icons prefix">markunread_mailbox</i>
-                            <input id="input-numero" type="number" placeholder="1024">
-                            <label for="icon_prefix">Número</label>
+
+                        <div class="row">
+                            <div id="div-celular" class="input-field col s12 m6">
+                                <i class="material-icons prefix">phone_iphone</i>
+                                <input class="celular" type="text" placeholder="(00)00000-0000">
+                                <label for="icon_prefix">Celular</label>
+                            </div>
+                            <div class="input-field col s12 m6">
+                                <i class="material-icons prefix">mail</i>
+                                <input type="email" placeholder="darthvaider@estreladamorte.com">
+                                <label for="icon_prefix">E-mail</label>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="input-field col s12 m12 l6">
+                                <i class="material-icons prefix">location_on</i>
+                                <input id="input-cep" class="cep" type="text" placeholder="85070700">
+                                <label for="icon_prefix">CEP</label>
+                            </div>
+
+                            <div class="input-field col s12 m12 l6">
+                                <i class="material-icons prefix">markunread_mailbox</i>
+                                <input id="input-numero" type="number" placeholder="1024">
+                                <label for="icon_prefix">Número</label>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col s12 m12 l6">
+                                <button id="button-cadastro" class="waves-effect waves-light btn" type="submit">
+                  <i class="material-icons left">check_circle</i>Cadastrar</button>
+                            </div>
+                            <div class="col s12 m12 l6">
+                                <button id="button-cancelar-cadastro" class="waves-effect waves-light btn" type="button">
+                  <i class="material-icons left">cancel</i>Cancelar</button>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+                        <div class="col s12">
+                            <button id="button-pesquisar-cliente" class="waves-effect waves-light btn" type="submit">
+                <i class="material-icons left">check_circle</i>Pesquisar</button>
                         </div>
                     </div>
 
-                    <h3>Crie sua senha</h3>
-                    <div class="row">
-                        <div class="input-field col s12 m12 l6">
-                            <i class="material-icons prefix">lock</i>
-                            <input type="password" placeholder="********">
-                            <label for="icon_prefix">Senha</label>
-                        </div>
-                        <div class="input-field col s12 m12 l6">
-                            <i class="material-icons prefix">lock</i>
-                            <input type="password" placeholder="********">
-                            <label for="icon_prefix">Confirmar Senha</label>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col s12 m12 l6">
-                            <button id="button-cadastro" class="waves-effect waves-light btn" type="button">
-                <i class="material-icons left">check_circle</i>Cadastrar</button>
-                        </div>
-                        <div class="col s12 m12 l6">
-                            <button id="button-cancelar-cadastro" class="waves-effect waves-light btn" type="button">
-                <i class="material-icons left">cancel</i>Cancelar</button>
-                        </div>
-                    </div>
                 </form>
             </div>
         </section>
@@ -388,6 +334,7 @@
     <script src="assets/libraries/materialize-v1.0.0/js/materialize.min.js"></script>
     <script src="assets/libraries/jQuery-Mask-Plugin-master/dist/jquery.mask.min.js"></script>
     <script src="assets/resources/scripts/inicializacao-bibliotecas.js"></script>
+
 </body>
 
 </html>
